--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -1,22 +1,3 @@
-php_flag short_open_tag off 
-
 RewriteEngine On
-
-RewriteCond %{HTTP_HOST} dropbox\.jagermesh\.com [NC]
-RewriteRule ^(.*)$ http://dl.getdropbox.com/u/4202744/$1 [L,QSA]
-
-#RewriteRule xml$ - [L]
-RewriteRule gif$ - [L]
-RewriteRule css$ - [L]
-RewriteRule jpg$ - [L]
-RewriteRule jpeg$ - [L]
-RewriteRule js$ - [L]
-RewriteRule swf$ - [L]
-RewriteRule png$ - [L]
-RewriteRule ico$ - [L]
-RewriteRule avi$ - [L]
-RewriteRule htc$ - [L]
-RewriteRule flv$ - [L]
-RewriteRule wmv$ - [L]
+RewriteRule [.](gif|css|jpg|jpeg|js|swf|png|ico|avi|htc|flv|wmv|xml)$ - [L]
 RewriteRule .* index.php
-
