--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bright",
-  "version": "1.1.0.0",
+  "version": "1.1.0",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.4.0",
@@ -8,6 +8,7 @@
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-qunit": "^0.5.1",
     "grunt-contrib-uglify": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-phplint": "^0.0.5"
   }
 }
