--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-qunit": "^0.5.1",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-phplint": "^0.0.5"
+    "grunt-phplint": "^0.0.5",
+    "grunt-casperjs": "^1.5.0"
   }
 }
