--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.1.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-casperjs": "^1.5.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-qunit": "^0.5.1",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-phplint": "^0.0.5",
-    "grunt-casperjs": "^1.5.0"
+    "grunt-phplint": "^0.0.5"
   }
 }
