--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "bright",
   "version": "1.1.0",
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-casperjs": "^1.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-phplint": "^0.0.5"
+  "dependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-casperjs": "^2.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-phplint": "0.0.8"
   }
 }
