--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
-    "name": "jagermesh/bright",
-    "require": {
+  "name": "jagermesh/bright",
+  "require": {
         "php": ">=5.3.0"
-    }
+  },
+  "scripts": {
+    "post-update-cmd": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit"]
+  }
 }
