--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
-RedirectMatch 404 /\.svn(/|$)
-RedirectMatch 404 /\.git(/|$)
+RedirectMatch 404 [.]svn/.*
+RedirectMatch 404 [.]git/.*
 RedirectMatch 404 Gruntfile.js
+RedirectMatch 404 _tmp/.*
+RedirectMatch 404 _logs/.*
