--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,23 @@
 {
   "name": "jagermesh/bright",
+  "type": "library",
+  "description": "PHP Web Framework",
+  "license": "MIT",
+  "authors": [
+      {
+          "name": "Sergiy Lavryk",
+          "email": "jagermesh@gmail.com"
+      }
+  ],
   "require": {
     "php": ">=5.3.0",
     "swiftmailer/swiftmailer": "^6.1",
     "mustache/mustache": "^2.12"
+  },
+  "autoload": {
+      "psr-0": {
+          "Bright": "./"
+      }
   },
   "scripts": {
     "hooks": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit", "chmod +x .git/hooks/prepare-commit-msg"]
