--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "grunt": "*",
     "grunt-contrib-concat": "*",
     "grunt-contrib-jshint": "*",
-    "grunt-contrib-uglify": "^4.0.0",
     "grunt-phplint": "*"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/jagermesh/bright.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "grunt-contrib-uglify": "^4.0.0"
+  }
 }
