--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.7.1",
-    "gulp-uglify": "^3.0.2",
+    "gulp-terser": "^1.2.0",
     "jshint": "^2.10.2",
     "merge-stream": "^2.0.0"
   },
