--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "swiftmailer/swiftmailer": "^6.1",
-    "mustache/mustache": "^2.12"
+    "swiftmailer/swiftmailer": "*",
+    "mustache/mustache": "*",
+    "longman/telegram-bot": "*"
   },
   "scripts": {
     "hooks": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit", "chmod +x .git/hooks/prepare-commit-msg"]
