--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -1,3 +1,2 @@
-RewriteEngine On
-RewriteRule [.](gif|css|jpg|jpeg|js|swf|png|ico|avi|htc|flv|wmv|xml)$ - [L]
-RewriteRule .* index.php
+RewriteEngine on
+RewriteRule (.*) index.php [L]
