--- a/tools/template-web/.htaccess
+++ b/tools/template-web/.htaccess
@@ -1,8 +1,7 @@
-RewriteEngine on
+RewriteEngine On
 RewriteCond %{REQUEST_URI} "/3rdparty/" [OR]
 RewriteCond %{REQUEST_URI} "/css/" [OR]
 RewriteCond %{REQUEST_URI} "/images/" [OR]
-RewriteCond %{REQUEST_URI} "/js/" [OR]
-RewriteCond %{REQUEST_URI} "/vendor/"
+RewriteCond %{REQUEST_URI} "/js/"
 RewriteRule (.*) $1 [L]
 RewriteRule (.*) index.php [L]
