--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "bright",
   "description": "Reactive PHP/JavaScript framework",
-  "version": "2.0.16",
+  "version": "2.0.17",
   "dependencies": {
-    "del": "^5.0.0",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.1.0",
-    "gulp-phplint": "^0.9.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-shell": "^0.7.1",
-    "gulp-terser": "^1.2.0",
-    "jshint": "^2.10.2",
-    "merge-stream": "^2.0.0"
+    "del": "*",
+    "gulp": "*",
+    "gulp-concat": "*",
+    "gulp-jshint": "*",
+    "gulp-phplint": "*",
+    "gulp-rename": "*",
+    "gulp-sass": "*",
+    "gulp-shell": "*",
+    "gulp-terser": "*",
+    "jshint": "*",
+    "merge-stream": "*"
   },
   "repository": {
     "type": "git",
