--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bright",
-  "description": "Reactive PHP/JavaScript framework",
-  "version": "2.0.18",
+  "description": "Web Framework",
+  "version": "2.0.21",
   "dependencies": {
     "gulp": "*",
     "gulp-concat": "*",
