--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "jagermesh/bright",
   "type": "library",
   "description": "Web Framework",
-  "version": "2.0.28",
+  "version": "2.0.29",
   "license": "MIT",
   "authors": [
     {
@@ -15,6 +15,9 @@
     "swiftmailer/swiftmailer": "*",
     "mustache/mustache": "*",
     "longman/telegram-bot": "*"
+  },
+  "require-dev": {
+    "codeception/codeception": "*"
   },
   "scripts": {
     "hooks": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit", "chmod +x .git/hooks/prepare-commit-msg"]
