--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "bright",
   "description": "Reactive PHP/JavaScript framework",
+  "version": "2.0.31",
   "main": "",
   "authors": [
     "Sergiy Lavryk <jagermesh@gmail.com>"
