--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "jagermesh/bright",
   "type": "library",
   "description": "Web Framework",
-  "version": "2.0.33",
+  "version": "2.0.34",
   "license": "MIT",
   "authors": [
     {
@@ -12,12 +12,14 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "swiftmailer/swiftmailer": "*",
-    "mustache/mustache": "*",
-    "longman/telegram-bot": "*"
+    "swiftmailer/swiftmailer": "^6.2",
+    "mustache/mustache": "^2.13",
+    "longman/telegram-bot": "^0.61.1"
   },
   "require-dev": {
-    "codeception/codeception": "*"
+    "codeception/codeception": "^4.0",
+    "codeception/module-phpbrowser": "^1.0",
+    "codeception/module-asserts": "^1.1"
   },
   "scripts": {
     "hooks": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit", "chmod +x .git/hooks/prepare-commit-msg"]
