--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "bright",
   "description": "Web Framework",
-  "version": "2.0.33",
+  "version": "2.0.34",
   "dependencies": {
     "gulp": "*",
-    "gulp-concat": "*",
-    "gulp-jshint": "*",
-    "gulp-phplint": "*",
-    "gulp-rename": "*",
-    "gulp-sass": "*",
-    "gulp-shell": "*",
-    "gulp-terser": "*",
-    "jshint": "*",
-    "merge-stream": "*"
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-phplint": "^0.9.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-shell": "^0.7.1",
+    "gulp-terser": "^1.2.0",
+    "jshint": "^2.10.3",
+    "merge-stream": "^2.0.0"
   },
   "repository": {
     "type": "git",
