--- a/.jshintrc
+++ b/.jshintrc
@@ -1,21 +1,26 @@
 {
+  "esversion": 8,
   "laxcomma": true,
   "loopfunc": true,
   "laxbreak": true,
   "sub": true,
   "undef": true,
-  "esversion": 6,
+  "elision": true,
   "globals": {
     "jQuery": true,
     "module": true,
     "document": true,
+    "navigator": true,
     "screen": true,
     "AudioContext": true,
-    "br": true,
-    "$": true,
+    "Notify": true,
     "window": true,
     "Handlebars": true,
     "confirm": true,
+    "alert": true,
+
+    "$": true,
+    "br": true,
     "alert": true,
     "humane": true,
     "Mustache": true,
