--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "description": "Web Framework",
   "version": "2.0.34",
   "dependencies": {
-    "gulp": "*",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.1.0",
     "gulp-phplint": "^0.9.0",
-    "gulp-rename": "^2.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.7.1",
     "gulp-terser": "^1.2.0",
-    "jshint": "^2.10.3",
-    "merge-stream": "^2.0.0"
+    "merge-stream": "^2.0.0",
+    "jshint": "^2.11.0",
+    "phplint": "^2.0.1",
+    "sass": "^1.26.3",
+    "terser": "^4.6.11"
   },
   "repository": {
     "type": "git",
