--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bright",
-  "description": "Web Framework",
-  "version": "2.0.35",
+  "description": "Reactive PHP/JavaScript Framework",
+  "version": "2.0.40",
   "license": "MIT",
   "dependencies": {
     "gulp": "^4.0.2",
