--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "jagermesh/bright",
   "type": "library",
   "description": "Reactive PHP/JavaScript Framework",
-  "version": "2.0.46",
+  "version": "2.0.47",
   "license": "MIT",
   "authors": [
     {
@@ -14,7 +14,8 @@
     "php": ">=7.1.0",
     "swiftmailer/swiftmailer": "^6.2",
     "mustache/mustache": "^2.13",
-    "longman/telegram-bot": "^0.62.0"
+    "longman/telegram-bot": "^0.62.0",
+    "neitanod/forceutf8": "~2.0"
   },
   "require-dev": {
     "codeception/codeception": "^4.1",
