--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bright",
   "description": "Reactive PHP/JavaScript Framework",
-  "version": "2.0.51",
+  "version": "2.0.52",
   "license": "MIT",
   "dependencies": {
     "gulp": "^4.0.2",
@@ -15,7 +15,7 @@
     "jshint": "^2.11.1",
     "merge-stream": "^2.0.0",
     "phplint": "^2.0.1",
-    "sass": "^1.26.5",
+    "sass": "^1.26.7",
     "terser": "^4.7.0"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "url": "git://github.com/jagermesh/bright.git"
   },
   "scripts": {
-    "build": "npm update && gulp build"
+    "build": "npm install && gulp build",
+    "update": "npm update && gulp build"
   }
 }
