--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,5 @@ RewriteCond %{REQUEST_URI} "/3rdparty/" [OR]
 RewriteCond %{REQUEST_URI} "/doc/" [OR]
 RewriteCond %{REQUEST_URI} "/images/" [OR]
 RewriteCond %{REQUEST_URI} "/tests/"
-RewriteRule (.*) $1 [L]
+RewriteRule (.*) - [L]
 RewriteRule (.*) - [F]
