--- a/tools/project-templates/web/package.json
+++ b/tools/project-templates/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "site",
-  "description": "site",
+  "name": "bright-site",
+  "description": "Bright Site",
   "version": "1.0.0",
   "dependencies": {
     "gulp": "^4.0.2",
@@ -8,10 +8,17 @@
     "gulp-jshint": "^2.1.0",
     "gulp-phplint": "^0.9.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-shell": "^0.7.1",
-    "gulp-terser": "^1.2.0",
-    "jshint": "^2.10.2",
-    "merge-stream": "^2.0.0"
+    "gulp-terser": "^1.3.2",
+    "jshint": "^2.12.0",
+    "merge-stream": "^2.0.0",
+    "phplint": "^2.0.3",
+    "sass": "^1.26.10",
+    "terser": "^4.8.0"
+  },
+  "scripts": {
+    "build": "composer install && cd ./vendor/jagermesh/bright && npm run build && cd ../../../ && npm install && gulp build",
+    "update": "composer update && cd ./vendor/jagermesh/bright && npm run update && cd ../../../ && npm update && gulp build"
   }
 }
