--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -10,12 +10,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Install composer dependencies
-      run: composer install
-
     - name: Install node dependencies
-      run: npm install
-
-    - name: Gulp
-      run: gulp
-
+      run: npm run test
