--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "gulp-jshint": "^2.1.0",
     "gulp-phplint": "^0.9.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass-universal": "^1.0.1",
     "gulp-shell": "^0.8.0",
     "gulp-terser": "^2.0.1",
     "jshint": "^2.12.0",
     "merge-stream": "^2.0.0",
     "phplint": "^2.0.5",
-    "sass": "^1.32.12",
+    "sass": "^1.33.0",
     "terser": "^5.7.0"
   },
   "repository": {
