--- a/tools/project-templates/web/package.json
+++ b/tools/project-templates/web/package.json
@@ -8,7 +8,7 @@
     "gulp-jshint": "^2.1.0",
     "gulp-phplint": "^0.9.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass-universal": "^1.0.1",
     "gulp-shell": "^0.7.1",
     "gulp-terser": "^1.3.2",
     "jshint": "^2.12.0",
