--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,11 +4,22 @@ on: [push]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest]
+        php-versions: ['7.4']
+    name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
-    - uses: actions/checkout@v1
-
-    - name: Install node dependencies
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+        # extensions: intl #optional
+        # ini-values: "post_max_size=256M" #optional
+    - name: Build project
+      run: npm run build
+    - name: Test project
       run: npm run test
