--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,10 @@
   "type": "library",
   "description": "Reactive PHP/JavaScript Framework",
   "license": "MIT",
-  "authors": [
-    {
-      "name": "Sergiy Lavryk",
-      "email": "jagermesh@gmail.com"
-    }
-  ],
+  "authors": [{
+    "name": "Sergiy Lavryk",
+    "email": "jagermesh@gmail.com"
+  }],
   "require": {
     "php": ">=7.1.0",
     "aws/aws-sdk-php": "^3",
@@ -16,12 +14,13 @@
     "cboden/ratchet": "^0.4",
     "ratchet/pawl": "^0.3",
     "phpseclib/phpseclib": "^2.0",
-    "swiftmailer/swiftmailer": "^6.2",
+    "swiftmailer/swiftmailer": "^6.3",
     "textalk/websocket": "^1.2",
     "mustache/mustache": "^2.13",
     "michelf/php-markdown": "^1",
     "longman/telegram-bot": "^0.64.0",
     "neitanod/forceutf8": "^2.0",
+    "symfony/mailer": "^5.4",
     "ext-json": "*"
   },
   "require-dev": {
@@ -32,5 +31,10 @@
   },
   "scripts": {
     "hooks": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit", "chmod +x .git/hooks/prepare-commit-msg"]
+  },
+  "autoload": {
+    "psr-4": {
+      "Bright\\": "classes/"
+    }
   }
 }
