--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,24 @@
   }],
   "require": {
     "php": ">=7.1.0",
-    "aws/aws-sdk-php": "^3",
-    "guzzlehttp/guzzle": "^6",
-    "cboden/ratchet": "^0.4",
-    "ratchet/pawl": "^0.3",
-    "phpseclib/phpseclib": "^2.0",
-    "textalk/websocket": "^1.2",
-    "mustache/mustache": "^2.13",
-    "michelf/php-markdown": "^1",
-    "longman/telegram-bot": "^0.64.0",
+    "ext-json": "*",
+    "aws/aws-sdk-php": "^3.209",
+    "guzzlehttp/guzzle": "^7.4",
+    "cboden/ratchet": "^0.4.4",
+    "ratchet/pawl": "^0.4.1",
+    "phpseclib/phpseclib": "^3.0",
+    "textalk/websocket": "^1.5",
+    "mustache/mustache": "^2.14",
+    "michelf/php-markdown": "^1.9",
+    "longman/telegram-bot": "^0.75.0",
     "neitanod/forceutf8": "^2.0",
-    "symfony/mailer": "^5.4",
-    "ext-json": "*"
+    "symfony/mailer": "^5.4"
   },
   "require-dev": {
     "codeception/codeception": "^4.1",
-    "codeception/module-phpbrowser": "^1.0",
-    "codeception/module-asserts": "^1.3",
-    "squizlabs/php_codesniffer": "3.*"
+    "codeception/module-phpbrowser": "^2.0",
+    "codeception/module-asserts": "^2.0",
+    "squizlabs/php_codesniffer": "^3"
   },
   "scripts": {
     "hooks": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit", "chmod +x .git/hooks/prepare-commit-msg"]
