--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.1.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-phplint": "^0.9.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass-universal": "^1.0.1",
     "gulp-shell": "^0.8.0",
     "gulp-terser": "^2.1.0",
-    "jshint": "^2.13.3",
+    "eslint": "^8.7.0",
     "merge-stream": "^2.0.0",
     "phplint": "^2.0.5",
     "sass": "^1.48.0",
