--- a/tools/project-templates/web/package.json
+++ b/tools/project-templates/web/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.1.0",
     "gulp-phplint": "^0.9.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass-universal": "^1.0.1",
     "gulp-shell": "^0.7.1",
     "gulp-terser": "^1.3.2",
-    "jshint": "^2.12.0",
+    "gulp-eslint": "^6.0.0",
+    "eslint": "^8.7.0",
     "merge-stream": "^2.0.0",
     "phplint": "^2.0.3",
     "sass": "^1.26.10",
