--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "gulp-sass-universal": "^1.0.1",
     "gulp-shell": "^0.8.0",
     "gulp-terser": "^2.1.0",
-    "eslint": "^8.7.0",
+    "eslint": "^8.14.0",
     "merge-stream": "^2.0.0",
     "phplint": "^2.0.5",
-    "sass": "^1.48.0",
-    "terser": "^5.10.0"
+    "sass": "^1.51.0",
+    "terser": "^5.13.0"
+  },
+  "dependencies": {
+    "js-flyovers": "^1.0.3",
+    "js-link-previewer": "^1.0.3",
+    "js-smart-hint": "^1.0.3"
   },
   "repository": {
     "type": "git",
