--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "codeception/module-asserts": "^1",
     "squizlabs/php_codesniffer": "^3",
     "symplify/easy-coding-standard": "^11.1",
-    "nunomaduro/phpinsights": "^2.6"
+    "rector/rector": "^0.14.3"
   },
   "scripts": {
     "hooks": ["rm -rf .git/hooks", "ln -s ../tools/git-hooks .git/hooks", "chmod +x .git/hooks/pre-commit", "chmod +x .git/hooks/prepare-commit-msg"]
