--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,13 @@
     "email": "jagermesh@gmail.com"
   }],
   "require": {
-    "php": ">=7.1.0",
+    "php": ">=7.4",
     "ext-json": "*",
     "ext-libxml": "*",
     "ext-dom": "*",
+    "ext-xml": "*",
+    "ext-mbstring": "*",
+    "ext-openssl": "*",
     "aws/aws-sdk-php": "^3",
     "guzzlehttp/guzzle": "^6",
     "cboden/ratchet": "^0.4",
